fixed pricing section

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -16,6 +16,15 @@ body {
   h1, h2, h3, h4, h5, h6 {
     margin: 0;
   }
+
+  /* .h1-title {
+    margin: 0 0 10px 0;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 56px;
+    font-family: "Philosopher", sans-serif;
+    color: #71c55d;
+  } */
   
   h2 {
     color: #000;
@@ -145,6 +154,16 @@ body {
     letter-spacing: 1px;
     margin: 0;
   }
+
+  /* .h1-title {
+    margin: 0 0 10px 0;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 56px;
+    font-family: "Philosopher", sans-serif;
+    color: #71c55d;
+  } */
+
   #header #logo h1 a {
     color: #555;
     display: inline-block;
@@ -632,32 +651,32 @@ body {
     padding-right: 20px;
   }
   
-  /* Features Section
+  /* Services Section
   --------------------------------*/
-  #features {
+  #services {
     display: inline-block;
     height: 100%;
     width: 100%;
   }
-  #features .feature-block {
+  #services .service-block {
     background: #fff none repeat scroll 0 0;
     padding: 30px 20px;
     margin-bottom: 30px;
     transition: all 0.5s ease-in-out 0s;
   }
-  #features .feature-block img {
+  #services .service-block img {
     height: 60px;
     margin-bottom: 30px;
     width: 60px;
   }
-  #features .feature-block:hover {
+  #services .service-block:hover {
     box-shadow: 0 0 35px rgba(0, 0, 0, 0.1);
     transition: all 0.5s ease-in-out 0s;
   }
-  #features .feature-block h4 {
+  #services .service-block h4 {
     margin-bottom: 20px;
   }
-  #features .feature-block p {
+  #services .service-block p {
     margin-bottom: 0;
   }
   
