fixed introduction section

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -65,7 +65,7 @@ body {
     font-weight: 400;
     letter-spacing: 2px;
     line-height: 30px;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
   }
   
   p {
@@ -472,6 +472,81 @@ body {
   #hero .btns a:hover {
     color: #71c55d;
   }
+
+  /* Testimonials Section
+  --------------------------------*/
+  #testimonials .testimonials-content {
+    box-shadow: 0 0 35px rgba(0, 0, 0, 0.1);
+    padding: 49px 20px;
+  }
+  
+  #testimonials .testimonials-content::before {
+    color: #71c55d;
+    content: "\f10e";
+    display: inline-block;
+    font: 70px/1 FontAwesome;
+    position: absolute;
+    right: 43px;
+    text-align: left;
+    top: -29px;
+  }
+  
+  #testimonials .top-top > h2 {
+    font-family: "Roboto" sans-serif;
+    font-size: 45px;
+    font-weight: 100;
+    letter-spacing: 2px;
+    margin-bottom: 20px;
+    text-transform: capitalize;
+  }
+  
+  #testimonials .top-top > h4 {
+    font: 700 12px Lato, sans-serif;
+  }
+  
+  #testimonials .top-top span {
+    font-size: 12px;
+    font-weight: 300;
+    margin-left: 26px;
+  }
+  
+  #testimonials .btm-btm ul li {
+    float: left;
+    margin: 0 8px;
+    border-radius: 50%;
+    padding: 0;
+    overflow: hidden;
+    background: #ddd none repeat scroll 0 0;
+    cursor: pointer;
+    height: 12px !important;
+    width: 12px !important;
+    border: 0;
+    content: "";
+  }
+  
+  #testimonials .btm-btm .active {
+    background: #71c55d;
+  }
+  
+  .carousel-indicators {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    bottom: 0 !important;
+    z-index: 15;
+    width: auto;
+    padding-left: 0;
+    margin: 30px auto 0 auto;
+    margin-right: auto;
+    text-align: center;
+    list-style: none;
+    margin-bottom: 0;
+    display: inline-block;
+  }
+  
+  .carousel-indicators li {
+    margin: 0;
+  }
   
   /*--------------------------------------------------------------
   # Sections
@@ -870,81 +945,6 @@ body {
   #team .team-block:hover .team-content {
     bottom: 0px;
     transition: all 0.5s ease-in-out 0s;
-  }
-  
-  /* Testimonials Section
-  --------------------------------*/
-  #testimonials .testimonials-content {
-    box-shadow: 0 0 35px rgba(0, 0, 0, 0.1);
-    padding: 49px 20px;
-  }
-  
-  #testimonials .testimonials-content::before {
-    color: #71c55d;
-    content: "\f10e";
-    display: inline-block;
-    font: 70px/1 FontAwesome;
-    position: absolute;
-    right: 43px;
-    text-align: left;
-    top: -29px;
-  }
-  
-  #testimonials .top-top > h2 {
-    font-family: "Roboto" sans-serif;
-    font-size: 45px;
-    font-weight: 100;
-    letter-spacing: 2px;
-    margin-bottom: 20px;
-    text-transform: capitalize;
-  }
-  
-  #testimonials .top-top > h4 {
-    font: 700 12px Lato, sans-serif;
-  }
-  
-  #testimonials .top-top span {
-    font-size: 12px;
-    font-weight: 300;
-    margin-left: 26px;
-  }
-  
-  #testimonials .btm-btm ul li {
-    float: left;
-    margin: 0 8px;
-    border-radius: 50%;
-    padding: 0;
-    overflow: hidden;
-    background: #ddd none repeat scroll 0 0;
-    cursor: pointer;
-    height: 12px !important;
-    width: 12px !important;
-    border: 0;
-    content: "";
-  }
-  
-  #testimonials .btm-btm .active {
-    background: #71c55d;
-  }
-  
-  .carousel-indicators {
-    position: relative;
-    bottom: 0;
-    left: 0;
-    bottom: 0 !important;
-    z-index: 15;
-    width: auto;
-    padding-left: 0;
-    margin: 30px auto 0 auto;
-    margin-right: auto;
-    text-align: center;
-    list-style: none;
-    margin-bottom: 0;
-    display: inline-block;
-  }
-  
-  .carousel-indicators li {
-    margin: 0;
   }
   
   /* Pricing Table Section
