--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -175,6 +175,8 @@ body {
   #header #logo img {
     padding: 0;
     margin: 0;
+    width: 20%;
+    height: auto;
   }
   #header.header-scrolled {
     background: #fff;
@@ -371,7 +373,7 @@ body {
   #hero {
     width: 100%;
     height: calc(100vh - 40px);
-    background: url(../img/hero-bg.png) center bottom no-repeat;
+    background: url(../img/hero-city.png) center bottom no-repeat;
     background-size: 100%;
     position: relative;
     margin-top: 40px;
@@ -431,10 +433,14 @@ body {
       margin-bottom: 30px;
     }
   }
+
   #hero img {
-    max-width: 95%;
+    max-width: 40%;
     margin-bottom: 30px;
   }
+
+  /* 95% 30px */
+
   #hero .btn-get-started {
     font-family: "Roboto", sans-serif;
     text-transform: uppercase;
@@ -451,10 +457,12 @@ body {
     color: #71c55d;
     text-decoration: none;
   }
+
   #hero .btn-get-started:hover {
     background: #71c55d;
     color: #fff;
   }
+
   #hero .btns a {
     color: #555;
     font-size: 11px;
@@ -473,12 +481,14 @@ body {
     color: #71c55d;
   }
 
-  /* Introduction Carousel Section
+  /* Introduction Section
   --------------------------------*/
   #hero .hero-container-introduction {
     /* box-shadow: 0 0 35px rgba(0, 0, 0, 0.1); */
-    padding: 49px 20px;
+    padding: 20px 20px;
   }
+
+  /* 49px 20px */
   
   /* #hero .hero-container-introduction::before {
     color: #71c55d;
@@ -527,27 +537,7 @@ body {
   #hero .btm-btm .active {
     background: #71c55d;
   }
-  
-  .carousel-indicators {
-    position: relative;
-    bottom: 0;
-    left: 0;
-    bottom: 0 !important;
-    z-index: 15;
-    width: auto;
-    padding-left: 0;
-    margin: 30px auto 0 auto;
-    margin-right: auto;
-    text-align: center;
-    list-style: none;
-    margin-bottom: 0;
-    display: inline-block;
-  }
-  
-  .carousel-indicators li {
-    margin: 0;
-  }
-  
+
   /*--------------------------------------------------------------
   # Sections
   --------------------------------------------------------------*/
@@ -594,7 +584,7 @@ body {
     font-size: 15px;
     font-weight: 300;
     margin-bottom: 30px;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
   }
   
   /*--------------------------------------------------------------
@@ -690,7 +680,7 @@ body {
     font-size: 12px;
     font-weight: 600;
     text-decoration: none;
-    text-transform: capitalize;
+    text-transform: uppercase;
     transition: 0.3s;
   }
   #get-started .feature-block a:hover {
@@ -1148,13 +1138,15 @@ body {
   /* Newsletter Section
   --------------------------------*/
   #newsletter {
-    background: rgba(0, 0, 0, 0) url(../img/newsletter-bg.jpg) no-repeat center top fixed;
+    background: rgba(0, 0, 0, 0) url(../img/newsletter-city.jpg) no-repeat center top fixed;
     background-size: cover;
   }
   #newsletter .overlay {
     background: linear-gradient(rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.2) 95%);
-    height: 100%;
-    width: 100%;
+    /* height: 100%;
+    width: 100%; */
+    height: 290px;
+    width: 1440px;
   }
   #newsletter .form-control {
     background-color: transparent;
