--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -571,7 +571,7 @@ body {
     font-weight: 100;
     letter-spacing: 2px;
     margin-bottom: 20px;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
   }
   
   .section-title .separator {
@@ -1140,14 +1140,15 @@ body {
   #newsletter {
     background: rgba(0, 0, 0, 0) url(../img/newsletter-city.jpg) no-repeat center top fixed;
     background-size: cover;
+    height: 300px;
   }
+  
   #newsletter .overlay {
     background: linear-gradient(rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.2) 95%);
-    /* height: 100%;
-    width: 100%; */
-    height: 290px;
-    width: 1440px;
+    height: 100%;
+    width: 100%;
   }
+
   #newsletter .form-control {
     background-color: transparent;
     border: 1px solid #dddddd;
