fixed footer links

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -135,6 +135,7 @@ body {
   # Header
   --------------------------------------------------------------*/
   #header {
+    /* background: #71c55d; */
     background: #fff;
     z-index: 997;
     transition: all 0.5s ease;
