--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -948,6 +948,9 @@ body {
   }
   #team .team-block img {
     width: 100%;
+    object-fit: cover;
+    /* object-position: 100% 10%; */
+    /* overflow: hidden; */
   }
   #team .team-block .team-content {
     background: #fff none repeat scroll 0 0;
